Pilet funktioniert an sich...

--- a/package.json
+++ b/package.json
@@ -10,43 +10,67 @@
     "build": "pilet build",
     "upgrade": "pilet upgrade",
     "postinstall": "pilet declaration",
+    "lint": "npx ng lint",
     "prettier": "prettier . --write"
   },
   "dependencies": {
-    "@angular/common": "^17",
-    "@angular/compiler": "^17",
-    "@angular/core": "^17",
-    "@angular/platform-browser": "^17",
-    "@angular/platform-browser-dynamic": "^17",
-    "@angular/router": "^17",
-    "core-js": "^3.19.0",
+    "@angular/animations": "^17.3.3",
+    "@angular/common": "17.3.3",
+    "@angular/compiler": "17.3.3",
+    "@angular/core": "17.3.3",
+    "@angular/forms": "17.3.3",
+    "@angular/platform-browser": "17.3.3",
+    "@angular/platform-browser-dynamic": "17.3.3",
+    "@angular/router": "17.3.3",
+    "@syncfusion/ej2-angular-base": "23.1",
+    "@syncfusion/ej2-angular-buttons": "23.1",
+    "@syncfusion/ej2-angular-grids": "23.1",
+    "@syncfusion/ej2-angular-navigations": "23.1",
+    "jest-editor-support": "*",
+    "moment": "^2.29.4",
     "piral-ng": "1.5.2",
-    "piral-ng-common": "^17",
+    "piral-ng-common": "16.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.12.0",
-    "rxjs": "^7.4",
+    "rxjs": "^7.8.1",
+    "tslib": "2.5.2",
+    "uuid": "^9.0.0",
     "zone.js": "0.14.0"
   },
   "devDependencies": {
-    "@angular/cli": "^17",
-    "@angular/compiler-cli": "^17",
-    "@ngtools/webpack": "^17",
+    "@angular-devkit/build-angular": "^17.3.3",
+    "@angular-eslint/builder": "17.3.0",
+    "@angular-eslint/eslint-plugin": "17.3.0",
+    "@angular-eslint/eslint-plugin-template": "17.3.0",
+    "@angular-eslint/schematics": "17.3.0",
+    "@angular-eslint/template-parser": "17.3.0",
+    "@angular/cli": "^17.3.3",
+    "@angular/compiler-cli": "17.3.3",
+    "@ngtools/webpack": "^17.3.3",
+    "@types/jasmine": "^4.3.5",
     "@types/node": "latest",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "copy-webpack-plugin": "^10",
-    "html-loader": "^3",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "autoprefixer": "^10.4.15",
+    "copy-webpack-plugin": "^11.0.0",
+    "eslint": "^8.57.0",
+    "html-loader": "^4.2.0",
     "piral-cli": "1.5.2",
     "piral-cli-webpack5": "1.5.2",
-    "prettier": "^3.2.5",
+    "postcss": "^8.4.27",
+    "postcss-loader": "^7.3.3",
+    "prettier": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router": "5.3.4",
     "react-router-dom": "5.3.4",
     "sample-piral": "1.5.2",
-    "to-string-loader": "^1",
-    "tslib": "2.5.2",
-    "typescript": "~5.2"
+    "tailwindcss": "^3.3.5",
+    "to-string-loader": "^1.2.0",
+    "ts-node": "^10.9.1",
+    "typescript": "5.4.4"
   },
   "importmap": {
     "inherit": [
@@ -56,10 +80,12 @@
       "@angular/common": "",
       "@angular/compiler": "",
       "@angular/core": "",
+      "@angular/forms": "",
       "@angular/platform-browser": "",
       "@angular/platform-browser-dynamic": "",
       "@angular/router": "",
-      "piral-ng-common": ""
+      "piral-ng-common": "",
+      "zone.js": ""
     }
   },
   "main": "dist/index.js",
