--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "tailwind.config.js"],
   "exclude": ["node_modules", "src/**/*.spec.ts"]
 }
