--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "@syncfusion/ej2-angular-navigations": "23.1",
     "jest-editor-support": "*",
     "moment": "^2.29.4",
-    "piral-ng": "1.5.2",
-    "piral-ng-common": "16.0.0",
+    "piral-ng": "^1.6.0-beta.7175",
+    "piral-ng-common": "17.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.12.0",
     "rxjs": "^7.8.1",
@@ -57,8 +57,8 @@
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.57.0",
     "html-loader": "^4.2.0",
-    "piral-cli": "1.5.2",
-    "piral-cli-webpack5": "1.5.2",
+    "piral-cli": "1.5.6",
+    "piral-cli-webpack5": "1.5.6",
     "postcss": "^8.4.27",
     "postcss-loader": "^7.3.3",
     "prettier": "^3.0.1",
@@ -66,7 +66,7 @@
     "react-dom": "18.2.0",
     "react-router": "5.3.4",
     "react-router-dom": "5.3.4",
-    "sample-piral": "1.5.2",
+    "sample-piral": "^1.5.6",
     "tailwindcss": "^3.3.5",
     "to-string-loader": "^1.2.0",
     "ts-node": "^10.9.1",
